Intergrate bootstrap and refactor/fix administration SCSS files

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
@@ -55,6 +55,7 @@
   &.modal{
     height:100%;
     width:100%;
+    display: block;
     .popup{margin-top:$space*4;}
     .overlay{
       @include opacity(0.9);
