--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
@@ -14,10 +14,6 @@
     right: 0;
     bottom: 0;
     opacity: 0.4;
-    -o-user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
     -ms-user-select: none;
     user-select: none;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
@@ -32,6 +28,20 @@
     box-sizing: content-box !important;
   }
 
+  .ui-dialog-titlebar-close {
+    display: inline-block;
+    font-size: 0;
+    text-rendering: auto;
+
+    &:after {
+      content: "\f00d";
+      display: block;
+      font-size: 23px;
+      line-height: 18px;
+      padding-left: 2px;
+      font-family: "FontAwesome";
+    }
+  }
 
   $borderRadius: 0px;
   z-index: 22;
