Add popup styles to manager template

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -11,7 +11,7 @@
 @import "modules/radiobutton";
 @import "modules/dropdown";
 @import "modules/table";
-
+@import "modules/popup_dialog";
 @import "element/mbslider";
 
 
