--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
@@ -67,6 +67,21 @@
     }
 
     .ui-dialog-titlebar-buttonpane{
+      button.close {
+        margin: 1px;
+        .ui-icon-closethick:before {
+          font-family: FontAwesome;
+          font-size: 23px;
+          display: inline-block;
+          content: "\f00d";
+          font-weight: bold;
+          margin-top: -2px;
+          margin-bottom: 2px;
+        }
+        .ui-button-icon-space {
+          display: none;
+        }
+      }
       a{
         @extend .btn;
         @extend .button;
@@ -116,6 +131,7 @@
             font-size: 18px;
             margin-top: -3px;
           }
+
           /** restore to normal **/
           &.ui-icon-newwin:after{
             content: "\f063";
