--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/printclient.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/printclient.scss
@@ -4,23 +4,171 @@
   display: none;
   overflow: visible;
 
-  label.labelInput {
-    width: auto;
-    font-weight: inherit;
-    margin-bottom: inherit;
-    line-height: $labelHeight;
-    height: $labelHeight;
-  }
-  .input, .dropdown {
-    min-width: 190px;
-    width: 100%;
-    margin-bottom: $space/2;
-  }
-  .printSubmit {
-    float: right;
+  .tab-container {
+    position: relative;
+    margin-top: 0px;
+    > ul.tabs {
+      display: block;
+      position: relative;
+      margin-top: 4px;
+      margin-bottom: 0px;
+      height: auto;
+      > li {
+        display: block;
+        margin-top: 2px;
+        float: left;
+
+        &.ui-state-active {
+          a {
+            background-color: #538e24;
+            padding-bottom: 5px;
+          }
+          margin-top: -1px;
+        }
+
+        a {
+          @extend .button;
+          padding-bottom: 3px;
+        }
+      }
+
+      &:after {
+        display: block;
+        clear: both;
+        content: '';
+        border-bottom: 1px solid #538e24;
+        margin-bottom: 20px;
+        position: relative;
+        //        visibility: hidden;
+        height: 0;
+        overflow: hidden;
+      }
+    }
   }
 
-  #printToggle.active {
-    background-color: #538e24;
+
+
+    label.labelInput {
+      width: 80px;
+      font-weight: inherit;
+      margin-bottom: inherit;
+      line-height: $labelHeight;
+      height: $labelHeight;
+    }
+
+    .input, .dropdown {
+      min-width: 190px;
+      width: 100%;
+      margin-bottom: $space/2;
+    }
+    .printSubmit {
+      float: right;
+    }
+
+    #printToggle.active {
+      background-color: #538e24;
+    }
+
+  
+  table.dataTable {
+    width: 100%;
+    > thead {
+      th {
+        cursor: default;
+        opacity: 0.7;
+        padding-left: 4px;
+        text-align: left;
+        background-color: #002D31;
+        color: #ffffff;
+        &.id {
+          text-align: center;
+        }
+        &.status {
+          text-align: center;
+        }
+      }
+    }
+
+    > tbody {
+      tr {
+        height: 27px;
+        &.odd {
+          background-color: #dddddd;
+        }
+        &.even {
+          //background-color: #ccc;
+          background-color: #ccc;
+
+        }
+
+        &:hover {
+          background-color: darken(#ccc, 10%);
+          cursor: default;
+        }
+
+        &.remove {
+          background-color: #9f3434;
+          opacity: 0.7;
+          td {
+            color: #ffffff;
+          }
+        }
+
+        td {
+
+          text-wrap: none;
+          white-space: nowrap;
+
+          &.id {
+            font-weight: bold;
+            text-align: right;
+          }
+          &.created {
+            width: 100%;
+          }
+          &.status {
+            width: 60px;
+            text-align: center;
+          }
+
+          &.uri {
+            text-align: right;
+            .progress{
+              &:before {
+                display: block;
+                height: 20px;
+                width: 20px;
+                content: "\f013";
+                float: left;
+                font-style: normal;
+                font-family: FontAwesome;
+                -webkit-animation:spin 1s linear infinite;
+                -moz-animation:spin 1s linear infinite;
+                animation:spin 1s linear infinite;
+                text-align: center;
+              }
+            }
+
+            a {
+              &.pdf {
+                &:before {
+                  font-family: FontAwesome;
+                  content: "\f1c1";
+                }
+              }
+              &.remove {
+                &:before {
+                  font-family: FontAwesome;
+                  content: "\f00d";
+                }
+              }
+            }
+
+          }
+          padding-left: 4px;
+        }
+      }
+    }
   }
+
 }
