Improve login input height style

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
@@ -39,7 +39,7 @@
         > .inputWrapper > input,
         > input {
           font-size: $fontSize * 1.4;
-          line-height: $fontSize * 1.5;
+          line-height: 2em;
           height: auto;
           padding-top: 0;
           padding-bottom: 0;
