--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
@@ -9,8 +9,11 @@
     > .container {
       display: none;
       &.active {
+        height: auto;
+        position: absolute;
+        top: 34px;
+        bottom: 0;
         display: block !important;
-        height: 90% !important;
         width: 100%;
         padding: 0;
         overflow: auto;
